Add delete confirmation functionality

--- a/Acceuil/acceuil.css
+++ b/Acceuil/acceuil.css
@@ -75,6 +75,132 @@ body {
   width: calc(80vw - 20px);
   transition: 0.3s;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 7vh;
+}
+
+.bp input[type="checkbox"] {
+  height: 3vh;
+  width: 3vh;
+}
+
+.corbeille {
+  height: 3vh;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.corbeille:hover {
+  transform: scale(1.2);
+}
+
+.fond_delConfirm {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 2;
+  display: none;
+}
+
+.delConfirm {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50vw;
+  height: 30vh;
+  background-color: white;
+  border-radius: 15px;
+  z-index: 3;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0px 17px 2px;
+  font-family: "Roboto";
+  font-size: 120%;
+}
+
+.delConfirm button[type="submit"],
+.delConfirm button[type="button"] {
+  position: absolute;
+  bottom: 15%;
+  width: 15%;
+  padding: 6px 0px 6px 0;
+  border-radius: 100px;
+  border: none;
+  color: white;
+  font-size: 13px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.delConfirm button[type="button"] {
+  right: 25%;
+  background: #9b0000;
+}
+
+.delConfirm button[type="submit"] {
+  left: 25%;
+  background: #1f6900;
+}
+
+.delConfirm button[type="submit"]:hover {
+  background: #4cb221;
+  box-shadow: 0 0px 20px #1f6900;
+}
+
+.delConfirm button[type="button"]:hover {
+  background: #dc0000;
+  box-shadow: 0 0px 20px #9b0000;
+}
+
+.switch-case {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+  position: fixed;
+}
+
+.switch {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 6vw;
+  height: 3vw;
+  background: rgb(81, 81, 81);
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+.switch:after {
+  content: "";
+  position: absolute;
+  top: 0.2vw;
+  left: 0.2vw;
+  width: 2.6vw;
+  height: 2.6vw;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + .switch {
+  background: #529a22;
+}
+
+input:checked + .switch:after {
+  left: calc(100% - 0.2vw);
+  transform: translateX(-100%);
+}
+
+.switch:active:after {
+  width: 4vw;
 }
 
 .pdf_btn,
