--- a/NewProg/newProg.css
+++ b/NewProg/newProg.css
@@ -47,9 +47,9 @@ body {
 }
 
 .newProg-form textarea {
-  width: calc(80vw - 10px - 4px); /* 10px padding + 2+2px border*/
+  width: calc(80vw - 20px - 4px); /* 20px padding + 2+2px border*/
   height: 27vh;
-  padding-top: 10px;
+  padding: 10px;
   font-family: sans-serif;
   resize: none;
 }
