--- a/Acceuil/accueil.css
+++ b/Acceuil/accueil.css
@@ -69,6 +69,21 @@ body {
   row-gap: 10px;
 }
 
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: rgb(192 192 192);
+  border-radius: 10px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: rgb(106 106 106);
+  border: 2px solid rgb(192 192 192);
+  border-radius: 20px;
+}
+
 .bp {
   background-color: grey;
   border-radius: 8px;
