--- a/NewBP/newBP.css
+++ b/NewBP/newBP.css
@@ -4,6 +4,21 @@ body {
   height: 100%;
 }
 
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgb(192 192 192);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(106 106 106);
+  border: 2px solid rgb(192 192 192);
+  border-radius: 20px;
+}
+
 .top {
   display: flex;
   align-items: flex-end;
