--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  font-family: sans-serif;
 }
 
 .top {
@@ -19,8 +20,9 @@ body {
 
 .top h1 {
   margin: 0;
-  font-family: "Roboto";
-  font-size: 175%;
+  font-family: "sans-serif";
+  font-style: non-bold;
+  font-size: 170%;
 }
 
 .btns {
