--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -105,6 +105,24 @@ body {
   width: 3vh;
 }
 
+.infopopup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 85vw;
+  height: 75vh;
+  background-color: #000000c9;
+  border-radius: 15px;
+  z-index: 3;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0px 17px 2px;
+  font-family: "Roboto";
+  flex-direction: column;
+}
+
 .corbeille {
   height: 3vh;
   cursor: pointer;
