--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -116,11 +116,72 @@ body {
   background-color: #000000c9;
   border-radius: 15px;
   z-index: 3;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   box-shadow: 0 0px 17px 2px;
   font-family: "Roboto";
   flex-direction: column;
+}
+
+.infopopup h1 {
+  margin: 0;
+  font-family: "Roboto";
+  color: white;
+  font-size: 200%;
+  height: 3vh;
+  width: fit-content;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.infopopup h2 {
+  margin: 0;
+  font-family: "Roboto";
+  color: white;
+  font-size: 150%;
+  height: 3vh;
+  width: fit-content;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.infopopup input {
+  float: right;
+  height: 3vh;
+  border-radius: 300px;
+  outline: 0;
+  outline-style: none;
+  border: 2px solid #575757;
+  background-color: #0f0f0fe3;
+  padding: 0 10px 0 10px;
+  margin: 3px 7px 3px 0;
+  font-size: 14px;
+  width: 15vw;
+  color: white;
+  transition: 0.3s;
+}
+
+.infopopup form button {
+  float: right;
+  background: #9fccff;
+  border: none;
+  border-radius: 100px;
+  height: 3vh;
+  width: 5vw;
+  margin: 5px 25px 5px 0;
+  color: #003e74;
+  font-family: sans-serif;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.infopopup form button:hover {
+  border: 0.5px solid #00182e;
+}
+
+.infopopup form button:active {
+  background: #003e74;
+  color: #9fccff;
 }
 
 .corbeille {
