--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -184,6 +184,30 @@ body {
   color: #9fccff;
 }
 
+.objectInfo {
+  width: fit-content;
+  background-color: #9fccff;
+  border-radius: 50px;
+  border: 0.5px solid;
+  padding: 5px;
+  color: #003e74;
+  font-family: sans-serif;
+  cursor: default;
+  margin: 5px;
+}
+
+.objectInfo button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.objectInfo button:hover {
+  color: red;
+  scale: 1.3;
+}
+
 .corbeille {
   height: 3vh;
   cursor: pointer;
