--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -121,12 +121,41 @@ body {
   height: 7vh;
 }
 .bp h2 {
-  font-weight: normal;
+  font-weight: 700;
+  width: 10vw;
+  margin-left: 1vw;
+}
+
+.selectionbp {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 15vw;
 }
 
 .bp input[type="checkbox"] {
   height: 3vh;
   width: 3vh;
+}
+
+.infobtn {
+  color: rgb(0, 0, 0);
+  background: rgb(189, 189, 189);
+  border: solid 1px black;
+  border-radius: 555px;
+  padding: 5px 10px;
+  margin: 1px;
+  height: 4vh;
+  width: 12vw;
+  transition: 0.3s;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.infobtn:hover {
+  background-color: #3f3f3f;
+  color: white;
+  border: 0.5px solid #000000;
 }
 
 .infopopup {
@@ -322,6 +351,7 @@ body {
   display: block;
   border-radius: 100px;
   position: relative;
+  margin-right: 1vw;
 }
 
 .switch:after {
