--- a/Forms/change_psw.css
+++ b/Forms/change_psw.css
@@ -12,7 +12,7 @@
 }
 
 .change-password-form h1 {
-  margin-bottom: 22%;
+  margin-bottom: 19%;
   font-size: xxx-large;
   font-family: monospace;
   width: 200%;
@@ -37,6 +37,32 @@
 .change-password-form input:focus {
   border: 2px solid #1f1f1f;
   background-color: #313131e3;
+}
+
+.infomsg {
+  border: 1px solid rgb(6 8 241 / 81%);
+  border-radius: 7px;
+  background-color: rgb(1 18 220 / 16%);
+  box-shadow: 0px 0px 2px #0703ff;
+  transition: 0.5s;
+  margin-top: -10px;
+  margin-bottom: 15px;
+  width: 85%;
+  color: #254da1;
+}
+
+.infomsg:hover {
+  background-color: rgba(1, 23, 220, 0.33);
+  transition: 0.5s;
+  color: #000000;
+}
+
+.infomsg p {
+  margin: 2px;
+  text-align: center;
+  font-size: 13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .error {
