--- a/Users/users.css
+++ b/Users/users.css
@@ -36,6 +36,7 @@ body {
   width: 12vw;
   height: 4vh;
   margin-left: 5px;
+  margin-right: 0px;
   padding: 3px;
   text-decoration: none;
   cursor: pointer;
