--- a/Validation/validation.css
+++ b/Validation/validation.css
@@ -19,6 +19,10 @@ body {
   font-size: xx-large;
 }
 
+svg {
+  width: 20vw;
+}
+
 .liokbtn {
   width: 12%;
 }
@@ -42,4 +46,29 @@ body {
 
 .errbtn:hover {
   box-shadow: 0 0 20px 4px #690000;
+}
+
+/* annimation svg*/
+.circle {
+  stroke-dasharray: 76;
+  stroke-dashoffset: 74;
+  animation: drawCircle 0.3s linear 0.8 forwards;
+}
+
+.check {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  animation: drawCheck 0.3s linear 1.1s forwards;
+}
+
+@keyframes drawCircle {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes drawCheck {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
