--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -230,7 +230,7 @@ body {
   margin-top: 5px;
   border-radius: 15px;
   color: white;
-  overflow-y: scroll;
+  overflow-y: auto;
   font-size: larger;
   font-family: monospace;
 }
