--- a/Prog/newProg.css
+++ b/Prog/newProg.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  font-family: sans-serif;
 }
 
 .top {
@@ -17,6 +18,8 @@ body {
 
 .top h1 {
   margin: 0;
+  font-weight: normal;
+  font-size: 170%;
 }
 
 .newProg-form {
