--- a/Forms/policyPassword.css
+++ b/Forms/policyPassword.css
@@ -42,7 +42,8 @@ body {
   color: #00182e;
   border: 0.5px solid #00182e;
 }
-content {
+
+.formPolicy {
   margin-left: 10vw;
   width: 80vw;
   height: calc(60vh + 10px);
@@ -54,7 +55,7 @@ content {
   flex-wrap: wrap;
 }
 
-.policy {
+policy {
   width: calc(40vw - 15px);
   height: 30vh;
   background: grey;
@@ -82,6 +83,28 @@ input {
 input:focus {
   border: 2px solid #1f1f1f;
   background-color: #313131e3;
+}
+
+.formPolicy label {
+  border: 1px solid rgb(68 214 65 / 81%);
+  border-radius: 7px;
+  background-color: rgb(104 199 44 / 16%);
+  box-shadow: 0px 0px 2px #16220f;
+  transition: 0.5s;
+  width: 60%;
+  padding: 3px;
+  color: #213c15;
+  text-align: center;
+  font-size: 13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: none;
+}
+
+.formPolicy label:hover {
+  background-color: rgba(49, 220, 1, 0.33);
+  transition: 0.5s;
+  color: #000000;
 }
 
 button[type="submit"] {
