--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /*index*/
 
 body {
-  background: url(../Img/sattelite.jpg);
+  background: url(../Img/sattelite.webp);
   margin: 0;
   width: 100%;
   height: 100%;
